# agentdispatch

./: .env.example  CLAUDE.md  CORRECTIONS_MADE.md  Cargo.toml  ENCRYPTION_SETUP.md  README.md  SRS_UPDATE_SUMMARY.md  STAKEHOLDER_DECISIONS.md  TELEGRAM_ACCESS_SRS.md  TODO.md  docker-compose.yml
FUTURE_FEATURES/: CancelInProgressRequests.md  TELEGRAM_ACCESS_SRS.md  TelegramConnectionMaintenance.md  TelegramConnectorDesign.md
frontend/agent-dispatch/: package-lock.json  package.json
frontend/agent-dispatch/app/: root.tsx  routes.ts
frontend/agent-dispatch/app/hooks/adapters/: useSessions.ts  (+1 more)
frontend/agent-dispatch/app/routes/: agents.tsx  chat.tsx  sessions.tsx
frontend/better-agent-builder/: package-lock.json  package.json
frontend/better-agent-builder/app/: api.ts  root.tsx  routes.ts
frontend/better-agent-builder/app/hooks/: useMessages.ts  useModels.ts
frontend/better-agent-builder/app/routes/: agents.tsx  chat.tsx  connectors.tsx  models.tsx  providers.tsx  sessions.tsx
src/: agents.rs  config.rs  crypto.rs  db.rs  error.rs  handler.rs  lib.rs  llm.rs  llm_models.rs  llm_providers.rs  main.rs  messages.rs  routes.rs  schema.rs  sessions.rs  users.rs  views.rs
src/agents/: agent_service.rs  db.rs  mod.rs  service.rs
src/llm/: llm_adapter.rs  service.rs  tool_registry.rs
src/llm_models/: mod.rs  model_service.rs  models_db.rs  service.rs
src/llm_providers/: db.rs  mod.rs  provider_service.rs  service.rs
src/messages/: agent_loop_service.rs  message_service.rs  messages_db.rs  mod.rs  service.rs  tool_call_service.rs
src/sessions/: mod.rs  service.rs  session_service.rs  sessions_db.rs
src/telegram/: db.rs  mod.rs  telegram_adapter.rs  telegram_registry.rs  telegram_service.rs  telegram_supervisor.rs
src/users/: mod.rs  service.rs  user_service.rs  users_db.rs
templates/: agents_form.html  agents_list.html  base.html  chat.html  home.html  layout.html  models_form.html  models_list.html  providers_form.html  providers_list.html  sessions_list.html  sessions_new.html
templates/agents/: form.html  list.html
templates/models/: form.html  list.html
templates/providers/: form.html  list.html
templates/sessions/: chat.html  list.html  new.html
(+4 files in other folders)
